test/tasty/neg/src-2/TestNames.check
TestNames_fail.scala:10: error: type mismatch;
 found   : String("Tom")
 required: tastytest.Names.Name
  def initialOfString = initial("Tom") // error, ("Tom": String)
                                ^
1 error
